# condor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONDOR.md  Dockerfile  Makefile  README.md  audit_log.yml  auth.py  condor_mcp.py  condor_widget_mcp.py  config_manager.py  docker-compose.yml  environment.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  servers.py  servers.yml  setup-environment.sh  tmux.md
assistants/: agent_builder.md  architect_reviewer.md  condor.md  routine_builder.md
backend_api_manager/: client.py  models.py
condor/: __init__.py  backtest_store.py  cache.py  data_manager.py  persistence.py  preferences.py  reports.py  routine_hooks.py  routine_store.py  server_data_service.py  telegram_notify.py  widget_bridge.py
docs/: ADOPTION_PLAN.md  VIRAL_GROWTH_PLAN.md  agent-fleet-redesign.md  agent-harness-knowledge-base.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
handlers/: __init__.py  bots.py  chatid.py  clob_trading.py  config.py  delegations.py  dex_trading.py  portfolio.py  status.py  trade_ai.py  webchat.py
hummingbot_mcp/: exceptions.py  hummingbot_client.py  middleware.py  schemas.py  server.py  settings.py
improvements/: README.md
routines/: __init__.py  adaptive_replay_backtest.py  agent_session_performance.py  arb_check.py  base.py  bot_report.py  error_test.py  hello_world.py  hl_candles.py  hyperliquid_market_scanner.py  hyperliquid_pairs.py  logs_summary.py  lp_monitor.py  lp_tpsl.py  macd_bb_analysis.py  market_scanner.py  morning_brief.py  price_monitor.py  strategy_replay_backtest.py
scripts/: migrate_notes_to_memory.py  migrate_to_agent_model.py  migrate_to_per_assistant_stores.py
services/: backend_api_client.py
tests/: conftest.py  test_agents.py  test_bot_performance.py  test_cursor_agent_client.py  test_cursor_bridge_rotation.py  test_cursor_engine_routing.py  test_delegate.py  test_hummingbot_client_factory.py  test_hummingbot_mcp_gateway_tools.py  test_managed_tools.py  test_memory_handler.py  test_memory_store.py  test_notification.py  test_performance_digest.py  test_reports_attribution.py  test_session_rotation.py  test_shutdown.py  test_skill_store.py  test_state_clearers.py  (+4 more)
(+634 files in other folders)
