[project]
name = "condor"
version = "0.1.0"
description = "Telegram bot for Hummingbot trading via Backend API"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]",
    "hummingbot-api-client==1.3.1",
    "python-dotenv",
    "PyYAML",
    "aiohttp",
    "watchfiles",
    "kaleido",
    "plotly",
    "pandas",
    "geckoterminal-py",
    "mcp",
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "faster-whisper",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "pre-commit"]

[tool.isort]
profile = "black"
